# simple-database

./: .gitignore  CMakeLists.txt  README.md
db_storage/: .gitkeep
include/: Database.h  Entity.h  Exception.h  Field.h  Manager.h  Record.h  Schema.h  StateMachine.h  Table.h  Utils.h
src/: Database.cpp  Entity.cpp  Exception.cpp  Field.cpp  Manager.cpp  Record.cpp  Schema.cpp  StateMachine.cpp  Table.cpp  Utils.cpp  main.cpp
